--- a/Index.html
+++ b/Index.html
@@ -4,16 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-   
+    <meta name="theme-color" content="#319197" media="(prefers-color-scheme: dark)">
     <meta name="description"
         content="I am a Student and Web developer. Visit my personal portfolio, which is built on the command-line interface (CLI)" />
+    <link rel="stylesheet" href="style.css">
     <title>The Sushil Sharma | Terminal - command-line interface </title>
 </head>
 
 <body>
+    <header>
+        <pre>
 
+        </pre>
+        <pre></pre>
+
+    </header>
+    <nav>
+
+    </nav>
+
+    <section>
+        <article>
+
+        </article>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
