--- a/Index.html
+++ b/Index.html
@@ -8,30 +8,37 @@
     <meta name="theme-color" content="#319197" media="(prefers-color-scheme: dark)">
     <meta name="description"
         content="I am a Student and Web developer. Visit my personal portfolio, which is built on the command-line interface (CLI)" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Assets/CSS/style.css">
     <title>The Sushil Sharma | Terminal - command-line interface </title>
 </head>
 
 <body>
-    <header>
-        <pre>
+    <main>
+        <header>
+            <h1>
+                The Sushil Sharma
+            </h1>
+        </header>
+        <nav>
 
-        </pre>
-        <pre></pre>
+        </nav>
+        <hr />
+        <section>
+            <article>
+                <textarea name="textarea" cols="70" rows="2"></textarea>
+            </article>
+            <aside>
 
-    </header>
-    <nav>
+            </aside>
+        </section>
+        <hr />
+        <footer>
+            <section>
+                &copy; 2022, The Sushil Sharma
+            </section>
+        </footer>
+    </main>
 
-    </nav>
-
-    <section>
-        <article>
-
-        </article>
-    </section>
-    <footer>
-
-    </footer>
 </body>
 
 </html>
