--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </section>
         <hr />
         <footer>
-            <section>
-                &copy; 2022, The Sushil Sharma
-            </section>
+           <small>
+            &copy; 2022, The Sushil Sharma
+           </small>
         </footer>
     </main>
 
