--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="I am a Student and Web developer. Visit my personal portfolio, which is built on the command-line interface (CLI)" />
     <link rel="stylesheet" href="Assets/CSS/style.css">
-    <title>The Sushil Sharma | Terminal - command-line interface </title>
+    <title>The Sushil Sharma | Terminal - Portfolio </title>
 </head>
 
 <body>
@@ -33,12 +33,13 @@
         </section>
         <hr />
         <footer>
-           <small>
-            &copy; 2022, The Sushil Sharma
-           </small>
+            <small>
+                &copy; 2022, The Sushil Sharma
+            </small>
         </footer>
     </main>
-
+    <script src="Assets/JS/command.js"></script>
+    <script src="Assets/JS/main.js"></script>
 </body>
 
 </html>
