--- a/index.html
+++ b/index.html
@@ -24,15 +24,8 @@
             <section>
                 <article>
                     <div id="command">
-                        <input type="text" id="terminal" placeholder="Try typing ? or help..."
-                            onchange="switchfunction()" list="commandlist">
-                        <datalist id="commandlist">
-                            <option value="help"></option>
-                            <option value="whoami"></option>
-                            <option value="education"></option>
-                            <option value="skills"></option>
-                            <option value="contact"></option>
-                        </datalist>
+                         <input type="text" id="terminal" placeholder="Try typing ? or help..."
+                            onchange="switchfunction()" >
                     </div>
                     <div>
                         <samp>
