--- a/index.html
+++ b/index.html
@@ -14,35 +14,18 @@
 
 <body>
     <main>
-        <header>
-            <h1>
-                The Sushil Sharma
-            </h1>
-        </header>
-        <hr />
-        <main>
-            <section>
-                <article>
-                    <div id="command">
-                         <input type="text" id="terminal" placeholder="Try typing ? or help..."
-                            onchange="switchfunction()" >
-                    </div>
-                    <div>
-                        <samp>
-                            <span id="output"></span>
-                        </samp>
-                    </div>
-                </article>
-                <aside>
-                </aside>
-            </section>
-        </main>
-        <hr />
-        <footer>
-            <small>
-                &copy; 2022, The Sushil Sharma
-            </small>
-        </footer>
+        <section>
+            <article>
+                <div id="command">
+                    <input type="text" id="terminal" placeholder="Try typing ? or help..." onchange="switchfunction()">
+                </div>
+                <div>
+                    <samp>
+                        <span id="output"></span>
+                    </samp>
+                </div>
+            </article>
+        </section>
     </main>
     <script src="Assets/JS/command.js"></script>
     <script src="Assets/JS/main.js"></script>
