adding clear by key

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section>
             <article>
                 <div id="command">
-                    <input type="text" id="terminal" placeholder="Try typing ? or help..." onchange="switchfunction()">
+                    <input type="text" id="terminal" onfocus="this.value=''" value="" placeholder="Try typing ? or help..." onchange="switchfunction()">
                 </div>
                 <div>
                     <samp>
