fixing js naming

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
     </main>
     <script src="Assets/JS/command.js"></script>
-    <script src="Assets/JS/app.js"></script>
+    <script src="Assets/JS/main.js"></script>
 </body>
 
 </html>
