--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 </head>
 
 <body class="bg-gray-900 text-white font-mono">
-    <main class="max-w-xl mx-auto mt-8">
-        <section>
-            <article>
+    <main class="flex items-center justify-center h-screen bg-gray-100">
+        <section class="w-full">
+          <article class="bg-gray-900 shadow-xl rounded-lg p-6">
                 <div>
                     <samp>
-                        <span id="terminal-output"></span>
+                        <span id="terminal-output" class="h-72 overflow-y-scroll bg-gray-700 text-gray-100 p-4"></span>
                     </samp>
                 </div>
-                <div id="command" class="mt-4">
+                <div id="command" class="mt-4 bg-gray-600 p-4">
                     <input type="text" id="terminal-input" onfocus="this.value=''" value=""
                         placeholder="Try typing ? or help..." onchange="handleCommand()"
-                        class="w-full bg-transparent border-b-2 border-white focus:outline-none focus:border-blue-500">
+                        class=" bg-gray-700 text-gray-100 border-none outline-none py-2 px-4 w-full bg-transparent border-b-2 border-white focus:outline-none focus:border-blue-500">
                 </div>
             </article>
         </section>
