--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
     <main class="flex items-center justify-center h-screen antialiased text-slate-500 bg-slate-300">
         <section class="w-full">
             <article class="bg-gray-900 shadow-xl rounded-lg p-6">
-                <div>
-                    <samp>
-                        <span id="terminal-output" class="h-72 overflow-y-scroll bg-gray-700 text-gray-100 p-4"></span>
-                    </samp>
-                </div>
-                <div id="command" class="fixed bottom-0 left-0 w-full z-10 bg-gray-700 p-4">
+                <div class="pt-4">
+                    <samp id="terminal-output" class="bg-gray-700 text-gray-100 p-4"></samp>
+                  </div>
+                <div id="command" class="left-0 w-full bg-gray-700 z-10">
                     <input type="text" id="terminal-input" autofocus onfocus="this.value=''" value=""
                         placeholder="Try typing ? or help..." onchange="handleCommand()"
-                        class=" bg-gray-700 text-gray-100 border-none outline-none py-2 px-4 w-full bg-transparent border-b-2 border-white focus:outline-none focus:border-blue-500">
+                        class=" bg-gray-700 text-gray-100 border-none outline-none py-2 px-4 w-full bg-transparent border-b-2 border-white focus:outline-none focus:border-blue-500 pb-10">
                 </div>
             </article>
         </section>
