dating more fixing to input tag

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
             <article class="bg-gray-900 shadow-xl rounded-lg p-6">
                 <div class="pt-4">
                     <samp id="terminal-output" class="bg-gray-700 text-gray-100 p-4"></samp>
-                  </div>
+                </div>
                 <div id="command" class="left-0 w-full bg-gray-700 z-10">
-                    <input type="text" id="terminal-input" autofocus onfocus="this.value=''" value=""
-                        placeholder="Try typing ? or help..." onchange="handleCommand()"
+                    <input type="text" id="terminal-input" autofocus placeholder="Try typing ? or help..."
                         class=" bg-gray-700 text-gray-100 border-none outline-none py-2 px-4 w-full bg-transparent border-b-2 border-white focus:outline-none focus:border-blue-500 pb-10">
                 </div>
             </article>
